<resources>
    <string name="app_name">Meechu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="google_place_api">AIzaSyB74G8MWNZ9SjY46NDXgc-L_irETJiT-cE</string>

    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login_btn_label">Login</string>
    <string name="sign_up_text">New User? SignUp</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_number">Phone Number</string>
    <string name="prompt_con_password">Confirm Password</string>
    <string name="reg_bn_label">Register</string>

    <string name="json_string">{"server_response":[{"name":"Matthew","email":"Matthew.sykes@hotmail.com","mobile":"4084990485"},{"name":"bob","email":"bob@gmail.com","mobile":"8887771515"}]}</string>
    <string name="title_activity_login">Sign in</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">Contacts permissions are needed for providing email
        completions."</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_build_event">BuildEventActivity</string>

    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_event">EventActivity</string>

    <!-- Shared Preferences test -->
    <string name="PREF_FILE">com.example.matthew.meechu_APP_PREF_FILE</string>
    <string name="login_status_preference">com.example.matthew.meechu_login_status_preference</string>
    <string name="login_user_id">com.example.matthew.meechu_login_user_id</string>
    <string name="login_user_lat">com.example.matthew.meechu_login_user_lat</string>
    <string name="login_user_lng">com.example.matthew.meechu_login_user_lng</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Navigation text -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>
