<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="90dp">

        <TextView
            android:id="@+id/tx_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_first_name"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_first_name"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tx_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_first_name"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_last_name"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_last_name"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tx_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_last_name"
            android:layout_alignParentLeft="true"
            android:text="@string/prompt_number"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_number"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tx_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_number"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_email"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tx_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_email"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_password"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_password"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:textColor="@color/textColor" />

        <TextView
            android:id="@+id/tx_con_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_password"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:text="@string/prompt_con_password"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reg_con_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tx_con_password"
            android:inputType="textPassword"
            android:textColor="@color/textColor" />

        <Button
            android:id="@+id/reg_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_con_password"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_selector"
            android:text="@string/reg_bn_label"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>